Update index.html moveing css to html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,74 @@
 			<a href=""><img src="pics/ICO/EN.png" class="fflag" height="30px"></a>
 		</center>
 	</div>
+<style>
+		body {
+		background-color: #280139;
+	}
+	
+	.title {
+		text-align: center;
+		font-size: 50px;
+		font-family: Tahoma, sans-serif;
+		color: white;
+		text-shadow: 0px 4px 10px gray;
+}
+
+	.flag {
+		margin-top: 20px;
+		
+	}
+	
+	.fflag {
+		box-shadow: 0px 0px 10px gray;
+		margin-left: 100px;
+		margin-right: 50px;
+		position: center;
+	}
+	
+	.ntext {
+		font-family: courier;
+		color: white;
+		text-shadow: 0px 4px 10px gray;
+		
+	}
+	
+	table.table {
+		font-family: courier;
+		color: white;
+		text-shadow: 0px 4px 10px gray;
+		text-align: center;
+		padding: 30px;
+		width: 70%;
+		border-collapse: collapse;
+	}
+	
+	button.button {
+		font-family: courier;
+		color: white;
+		text-shadow: 0px 4px 10px gray;
+		background-color: #280139;
+		border-radius: 5px;
+		border: 1px solid darkgray;
+		box-shadow: 0 2px 2px 0 gray, 0 6px 20px 0 gray;
+		height: 30px;
+		width: 200px;
+	}
+	
+	button.button:hover {
+		transition-duration: 0.4s;
+		font-family: courier;
+		color: #280139;
+		text-shadow: 0px 4px 10px gray;
+		background-color: white;
+		border-radius: 2px;
+		border: 1px solid darkgray;
+		box-shadow: 0 2px 2px 0 gray, 0 6px 20px 0 gray;
+
+	}
+</style>
+
+	
 </head>
 <body>
 	<center>
