--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 			<a href=""><img src="pics/ICO/EN.png" class="fflag" height="30px"></a>
 		</center>
 	</div>
+</head>
+<body>
+	<center>
+		<h2><box class="ntext">Tutaj dzielę się z wami problemami, rozwiązaniami na te problemu, uaktualnieniem mojego projektu, i NAPEWNO modyfikacjie!</box></h2>
+			
+			<table class="table">
+				<tr>
+					<th><a href="SD/update.html" class="dlt"><button type="button" class="button">UAKTUALNIENIA</button></a></th>
+					<th><button type="button" class="button">PROBLEMY I ROZWIĄZANIA</button></th>
+					<th><button type="button" class="button">INNE PROJEKTY</button></th>
+				</tr>
+			</table>		</center>
+		
+		<br><br>
+		<center><a class="note">Sam buduję, i staram się utrzymać tę stronę, więc jeżeli znajdziesz jakiś błąd powiadom mnie o tym!. </a></center>
+</body>
 <style>
 		body {
 		background-color: #280139;
@@ -77,17 +93,3 @@
 
 	}
 </style>
-
-	
-</head>
-<body>
-	<center>
-		<h2><a class="ntext">Tutaj dzielę się z wami problemami, rozwiązaniami na te problemu, uaktualnieniem mojego projektu, i NAPEWNO modyfikacjie!</a></h2>
-			<table class="table">
-				<tr>
-					<th><button type="button" class="button">UAKTUALNIENIA</button></th>
-					<th><button type="button" class="button">PROBLEMY I ROZWIĄZANIA</button></th>
-					<th><button type="button" class="button">INNE PROJEKTY</button></th>
-				</tr>
-			</table>
-</body>
