--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<center><a class="note">Sam buduję, i staram się utrzymać tę stronę, więc jeżeli znajdziesz jakiś błąd powiadom mnie o tym!. </a></center>
 </body>
 <style>
-		body {
+	body {
 		background-color: #280139;
 	}
 	
@@ -42,7 +42,6 @@
 
 	.flag {
 		margin-top: 20px;
-		
 	}
 	
 	.fflag {
@@ -52,11 +51,23 @@
 		position: center;
 	}
 	
+	.fflag:hover {
+		transition-duration: 0.4S;
+		box-shadow: 0px 0px 40px white;
+		margin-left: 100px;
+		margin-right: 50px;
+		position: center;
+	}
+	
+	box.ntext {
+	margin-left: 20px;
+	margin-right: 20px;
+	}
+	
 	.ntext {
 		font-family: courier;
 		color: white;
 		text-shadow: 0px 4px 10px gray;
-		
 	}
 	
 	table.table {
@@ -70,15 +81,17 @@
 	}
 	
 	button.button {
+		font-size: 20px;
 		font-family: courier;
 		color: white;
 		text-shadow: 0px 4px 10px gray;
 		background-color: #280139;
 		border-radius: 5px;
 		border: 1px solid darkgray;
-		box-shadow: 0 2px 2px 0 gray, 0 6px 20px 0 gray;
-		height: 30px;
+		box-shadow: 0px 0px 20px gray;
+		height: 50px;
 		width: 200px;
+		font-weight: bold;
 	}
 	
 	button.button:hover {
@@ -87,9 +100,23 @@
 		color: #280139;
 		text-shadow: 0px 4px 10px gray;
 		background-color: white;
-		border-radius: 2px;
-		border: 1px solid darkgray;
-		box-shadow: 0 2px 2px 0 gray, 0 6px 20px 0 gray;
-
+	}
+	
+	a.note {
+		font-family: courier;
+		color: white;
+		text-shadow: 0px 4px 10px gray;
+		font-weight: bold;
+		margin-left: 40px;
+		margin-right: 40px;
+	}
+	
+	.dlt {
+		text-decoration: none;
+		color: white;
+	}
+	
+	.dlt:hover {
+		color: #280139;
 	}
 </style>
